// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Omnitracking track events definitions \`Address Info Added\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": "1",
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\"}",
  "interactionType": "click",
  "tid": 2911,
}
`;

exports[`Omnitracking track events definitions \`Checkout Abandoned\` return should match the snapshot 1`] = `
Object {
  "tid": 2084,
}
`;

exports[`Omnitracking track events definitions \`Checkout Started\` return should match the snapshot 1`] = `
Object {
  "basketCurrency": "USD",
  "basketValue": 24.64,
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1}]",
  "tid": 2918,
}
`;

exports[`Omnitracking track events definitions \`Checkout Step Editing\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": 1,
  "tid": 2923,
}
`;

exports[`Omnitracking track events definitions \`Login\` return should match the snapshot 1`] = `
Object {
  "loginType": "Acme",
  "tid": 2924,
}
`;

exports[`Omnitracking track events definitions \`Logout\` return should match the snapshot 1`] = `
Object {
  "tid": 431,
}
`;

exports[`Omnitracking track events definitions \`Order Completed\` return should match the snapshot 1`] = `
Object {
  "orderCode": "ABC12",
  "tid": 2831,
}
`;

exports[`Omnitracking track events definitions \`Payment Info Added\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": undefined,
  "deliveryInformationDetails": undefined,
  "interactionType": undefined,
  "selectedPaymentMethod": "credit card",
  "tid": 2912,
}
`;

exports[`Omnitracking track events definitions \`Place Order Started\` return should match the snapshot 1`] = `
Object {
  "orderCode": "50314b8e9bcf000000000000",
  "promocode": "ACME2019",
  "shippingTotalValue": 3.6,
  "tid": 188,
}
`;

exports[`Omnitracking track events definitions \`Product Added to Cart\` return should match the snapshot 1`] = `
Object {
  "actionArea": "Wishlist",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1}]",
  "priceCurrency": "USD",
  "tid": 2915,
}
`;

exports[`Omnitracking track events definitions \`Product Added to Wishlist\` return should match the snapshot 1`] = `
Object {
  "tid": 35,
  "val": "507f1f77bcf86cd799439011",
}
`;

exports[`Omnitracking track events definitions \`Product Clicked\` return should match the snapshot 1`] = `
Object {
  "actionArea": "PLP",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1}]",
  "productId": "507f1f77bcf86cd799439011",
  "tid": 2926,
}
`;

exports[`Omnitracking track events definitions \`Product List Viewed\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"category\\":\\"\\",\\"itemFullPrice\\":25},{\\"productId\\":\\"507f1f77bcf86cd799439012\\",\\"itemPromotion\\":6,\\"category\\":\\"\\",\\"itemFullPrice\\":25}]",
  "tid": 2832,
}
`;

exports[`Omnitracking track events definitions \`Product Removed from Cart\` return should match the snapshot 1`] = `
Object {
  "actionArea": "Bag",
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1}]",
  "priceCurrency": "USD",
  "tid": 131,
}
`;

exports[`Omnitracking track events definitions \`Promocode Applied\` return should match the snapshot 1`] = `
Object {
  "errorMessage": "No promocode available.",
  "hasError": true,
  "promoCode": "ACME2019",
  "tid": 311,
}
`;

exports[`Omnitracking track events definitions \`Select Content\` return should match the snapshot 1`] = `
Object {
  "contentType": "biz",
  "interactionType": "click",
  "productId": 12345,
  "tid": 2895,
  "val": 12312312,
}
`;

exports[`Omnitracking track events definitions \`Share\` return should match the snapshot 1`] = `
Object {
  "actionArea": "PDP",
  "productId": "123456",
  "tid": 1205,
}
`;

exports[`Omnitracking track events definitions \`Shipping Info Added\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": "2",
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\"}",
  "interactionType": "click",
  "selectedPaymentMethod": "credit",
  "tid": 2914,
}
`;

exports[`Omnitracking track events definitions \`Shipping Method Added\` return should match the snapshot 1`] = `
Object {
  "checkoutStep": "2",
  "deliveryInformationDetails": "{\\"deliveryType\\":\\"Standard/Standard\\",\\"courierType\\":\\"Next Day\\"}",
  "interactionType": "click",
  "selectedPaymentMethod": "credit",
  "tid": 2913,
}
`;

exports[`Omnitracking track events definitions \`Sign-up Form Completed\` return should match the snapshot 1`] = `
Object {
  "loginType": "Acme",
  "tid": 2927,
}
`;

exports[`Omnitracking track events definitions \`bag\` return should match the snapshot 1`] = `
Object {
  "basketQuantity": 1,
  "basketValue": 13,
  "lineItems": "[{\\"productId\\":\\"507f1f77bcf86cd799439011\\",\\"itemPromotion\\":6,\\"designerName\\":\\"Just A T-Shirt\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":25,\\"itemQuantity\\":1}]",
  "viewSubType": "Bag",
  "viewType": "Shopping Bag",
}
`;

exports[`Omnitracking track events definitions \`checkout\` return should match the snapshot 1`] = `
Object {
  "orderCode": "ASH12",
  "orderValue": 100,
  "shippingTotalValue": 10,
  "viewSubType": "Checkout SPA",
  "viewType": "Checkout SPA",
}
`;

exports[`Omnitracking track events definitions \`pageDefinitions\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "deeplinkSource",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "dropDownListOptions",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "stylistId",
    "stockpointId",
    "suggestionType",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "quantityList",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "bookmarkId",
    "bookmarkItemList",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientTimestamp",
    "department",
    "dismiss",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "hasError",
    "hasNewMessages",
    "integrationId",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "tagList",
    "uniqueViewId",
    "uuid",
    "variantId",
    "applePayStatus",
    "availablePaymentOptions",
    "checkoutOrderId",
    "checkoutStep",
    "defaultPaymentMethod",
    "isShippingAddressClickAndCollect",
    "orderCode",
    "orderCurrency",
    "orderId",
    "orderValue",
    "orderVAT",
    "productCount",
    "promoCode",
    "saleProductCount",
    "selectableFieldsList",
    "shippingTotalValue",
    "shippingTypeFee",
    "userCheckoutType",
  ],
  "GenericPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "deeplinkSource",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "dropDownListOptions",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "stylistId",
    "stockpointId",
    "suggestionType",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "quantityList",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "bookmarkId",
    "bookmarkItemList",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientTimestamp",
    "department",
    "dismiss",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "hasError",
    "hasNewMessages",
    "integrationId",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "tagList",
    "uniqueViewId",
    "uuid",
    "variantId",
    "attributesList",
    "categoryList",
    "colourList",
    "deliveryOptions",
    "deliveryOptionsDetails",
    "designerList",
    "discount",
    "filtersApplied",
    "filterType",
    "interactionType",
    "marketType",
    "orderSummary",
    "pageNumber",
    "priceFilter",
    "returnId",
    "scaleList",
    "selectableFieldsList",
    "selectedOrderType",
    "sizeList",
    "orderDetails",
    "orderList",
    "paymentStatus",
    "shippingTotalValue",
    "shippingTypeFee",
    "tagSkuList",
  ],
  "ListingPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "deeplinkSource",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "dropDownListOptions",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "stylistId",
    "stockpointId",
    "suggestionType",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "quantityList",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "bookmarkId",
    "bookmarkItemList",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientTimestamp",
    "department",
    "dismiss",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "hasError",
    "hasNewMessages",
    "integrationId",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "tagList",
    "uniqueViewId",
    "uuid",
    "variantId",
    "categoryId",
    "collectionId",
    "designerId",
    "designerName",
    "didYouMean",
    "itemRankTypeList",
    "outfitId",
    "promotionId",
    "recsType",
    "saleType",
    "seasonId",
    "setId",
    "skuItemsListWithSimilar",
    "sortOption",
  ],
  "ProductPageVisited": Array [
    "abTests",
    "assistantUserId",
    "baselinePolicies",
    "basketCurrency",
    "basketId",
    "basketQuantity",
    "basketValue",
    "categoryIdList",
    "clientAdvertisingID",
    "clientCountry",
    "clientCulture",
    "clientGender",
    "clientInstallId",
    "clientLanguage",
    "clientSDKVersion",
    "clientVersion",
    "communicationPreferences",
    "crossDeviceCorrelationId",
    "deeplinkSource",
    "designerIdList",
    "device",
    "deviceId",
    "deviceLanguage",
    "deviceOS",
    "domainUrl",
    "dropDownListOptions",
    "elementsSeen",
    "exitInteraction",
    "fittingRoomID",
    "fittingRoomList",
    "geoLocation",
    "geoLocationCity",
    "geoLocationState",
    "hasAttachment",
    "hashedIp",
    "httpStatusCode",
    "impersonateUserId",
    "inStoreSessionId",
    "internalRequest",
    "ip",
    "isBot",
    "isCustomer",
    "isExclusive",
    "isLogged",
    "isReviewAvailable",
    "itemList",
    "itemStoreStockList",
    "lineItems",
    "loginType",
    "merchantName",
    "navigatedFrom",
    "ordersList",
    "pageId",
    "pageName",
    "parentId",
    "performanceTimings",
    "performanceTrackingIds",
    "previousParentId",
    "previousUniqueViewId",
    "priceType",
    "pricingManagement",
    "productShippingOptions",
    "pushStatus",
    "recommendationSource",
    "referrer",
    "referrerHost",
    "referrerUnionId",
    "returnDetails",
    "returnItemsSelectionList",
    "rewardCardsInformation",
    "screenHeight",
    "screenWidth",
    "searchResultCount",
    "searchResultsType",
    "searchSuggestion",
    "searchType",
    "selectedPaymentMethod",
    "sessionId",
    "startedTyping",
    "stylistId",
    "stockpointId",
    "suggestionType",
    "url",
    "userAgent",
    "userBenefits",
    "userCountryLocation",
    "userGender",
    "userRole",
    "quantityList",
    "utmCampaign",
    "utmContent",
    "utmMedium",
    "utmSource",
    "utmTerm",
    "viewCurrency",
    "viewGender",
    "viewSubType",
    "viewType",
    "weChatOpenID",
    "weChatUnionId",
    "wishlistQuantity",
    "accessTier",
    "actionArea",
    "advertisingConsent",
    "bookmarkId",
    "bookmarkItemList",
    "bundleAttributes",
    "bundleId",
    "categoryName",
    "clientTimestamp",
    "department",
    "dismiss",
    "errorMessage",
    "fittingRoomName",
    "functionalConsent",
    "hasError",
    "hasNewMessages",
    "integrationId",
    "itemPriceList",
    "itemSalePriceList",
    "itemStockList",
    "itemStoreList",
    "merchantLocationId",
    "messageComponentsList",
    "messageId",
    "messageNumber",
    "partnerDocuments",
    "performanceConsent",
    "pushPayload",
    "requestId",
    "requestStatus",
    "scrollDepth",
    "searchQuery",
    "skuItemList",
    "status",
    "storeConnections",
    "storeId",
    "tagList",
    "uniqueViewId",
    "uuid",
    "variantId",
    "applePayStatus",
    "categoryId",
    "collectionId",
    "complementaryLookType",
    "designerId",
    "designerName",
    "hasVto",
    "itemColourId",
    "lookId",
    "numberOfColours",
    "numberOfSizes",
    "numberOfSizesInStore",
    "outfitId",
    "rankType",
    "reviews",
    "seasonId",
    "totalStock",
    "totalStockInStore",
    "unitFullPrice",
    "unitSalePrice",
    "productId",
  ],
}
`;

exports[`Omnitracking track events definitions \`pageEventsFilter\` should match snapshot 1`] = `
Object {
  "CheckoutPageVisited": Array [
    "checkout",
    "checkout-delivery-method",
    "checkout-payment",
    "checkout-review",
    "checkout-shipping",
    "Checkout",
    "confirm",
    "payment",
  ],
  "ListingPageVisited": Array [
    "product-listing",
    "search",
    "ProductList",
    "listing",
    "search",
    "sets",
  ],
  "ProductPageVisited": Array [
    "product-details",
    "ProductDetail",
    "product",
  ],
}
`;

exports[`Omnitracking track events definitions \`product-details\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":12122479,\\"itemPromotion\\":1,\\"designerName\\":\\"Saint Laurent\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":2,\\"sizeID\\":\\"20\\",\\"itemQuantity\\":13,\\"promoCode\\":\\"EASTER2022\\",\\"storeID\\":20000}]",
  "viewSubType": "Product",
  "viewType": "Product",
}
`;

exports[`Omnitracking track events definitions \`product-listing\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":12345678,\\"itemPromotion\\":1,\\"designerName\\":\\"designer name\\",\\"category\\":\\"shoes\\",\\"itemFullPrice\\":1,\\"sizeID\\":1}]",
  "viewSubType": "Listing",
  "viewType": "Listing",
}
`;

exports[`Omnitracking track events definitions \`trackDefinitions\` should match snapshot 1`] = `
Array [
  "advertiserId",
  "categoryId",
  "checkoutOrderId",
  "contentProvider",
  "contentType",
  "deliveryInformationDetails",
  "designerId",
  "designerName",
  "dropDownListSelection",
  "fittingRoomQuantity",
  "isFixedMerchant",
  "itemColourId",
  "itemCoordinates",
  "itemQuantity",
  "itemSize",
  "loadItemCoordinate",
  "moduleContentID",
  "moduleContentName",
  "moduleId",
  "moduleLoadTime",
  "moduleState",
  "moduleType",
  "modulePublicationDate",
  "moduleVersion",
  "moduleWasInteracted",
  "moduleWasSeen",
  "numberOfColours",
  "orderCode",
  "orderCodeId",
  "partnersSubscriptionList",
  "productCount",
  "productPackagingOptions",
  "promoCode",
  "promotionDetails",
  "provider",
  "recommendationsId",
  "recommendationsProductList",
  "recsLoaded",
  "recsRequested",
  "recsStrategy",
  "recsType",
  "refundInformationDetails",
  "slotIndex",
  "sortOption",
  "sourceDescription",
  "sourceGroupDescription",
  "sourceId",
  "sourceType",
  "sourceWasSeen",
  "targetId",
  "targetType",
  "totalStock",
  "totalStockInStore",
  "unitFullPrice",
  "unitSalePrice",
  "wishlistId",
  "productId",
  "accessTier",
  "actionArea",
  "advertisingConsent",
  "bookmarkId",
  "bookmarkItemList",
  "bundleAttributes",
  "bundleId",
  "categoryName",
  "clientTimestamp",
  "department",
  "dismiss",
  "errorMessage",
  "fittingRoomName",
  "functionalConsent",
  "hasError",
  "hasNewMessages",
  "integrationId",
  "itemPriceList",
  "itemSalePriceList",
  "itemStockList",
  "itemStoreList",
  "merchantLocationId",
  "messageComponentsList",
  "messageId",
  "messageNumber",
  "partnerDocuments",
  "performanceConsent",
  "pushPayload",
  "requestId",
  "requestStatus",
  "scrollDepth",
  "searchQuery",
  "skuItemList",
  "status",
  "storeConnections",
  "storeId",
  "tagList",
  "uniqueViewId",
  "uuid",
  "variantId",
  "attributesList",
  "categoryList",
  "colourList",
  "deliveryOptions",
  "deliveryOptionsDetails",
  "designerList",
  "discount",
  "filtersApplied",
  "filterType",
  "interactionType",
  "marketType",
  "orderSummary",
  "pageNumber",
  "priceFilter",
  "returnId",
  "scaleList",
  "selectableFieldsList",
  "selectedOrderType",
  "sizeList",
  "val",
  "tid",
]
`;

exports[`Omnitracking track events definitions \`wishlist\` return should match the snapshot 1`] = `
Object {
  "lineItems": "[{\\"productId\\":12122479,\\"itemPromotion\\":1,\\"designerName\\":\\"Saint Laurent\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":2,\\"sizeID\\":\\"20\\",\\"itemQuantity\\":13,\\"promoCode\\":\\"EASTER2022\\",\\"storeID\\":20000},{\\"productId\\":12122479,\\"itemPromotion\\":1,\\"designerName\\":\\"Saint Laurent\\",\\"category\\":\\"Clothing\\",\\"itemFullPrice\\":2,\\"sizeID\\":\\"21\\",\\"itemQuantity\\":13,\\"promoCode\\":\\"EASTER2022\\",\\"storeID\\":20000}]",
  "viewSubType": "Wishlist",
  "viewType": "Wishlist",
  "wishlistQuantity": 26,
}
`;
